<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content_graph"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.mit.learning_english.presentation.feature.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/chat"
        android:name="com.mit.learning_english.presentation.feature.chat.ChooseTopicFragment"
        android:label="@string/nav_chat"
        tools:layout="@layout/fragment_choose_topic" />

    <fragment
        android:id="@+id/profile"
        android:name="com.mit.learning_english.presentation.feature.profile.ProfileFragment"
        android:label="@string/nav_profile" />

    <fragment
        android:id="@+id/vocabulary"
        android:name="com.mit.learning_english.presentation.feature.decklist.DeckListFragment"
        android:label="@string/nav_vocabulary"
        tools:layout="@layout/fragment_deck_list" />

</navigation>
